crates/borrowme/tests/ui/trait_diagnostics.stderr
error[E0277]: `MyType` doesn't implement `Debug`
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |                 ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `MyType`
   |
   = note: add `#[derive(Debug)]` to `MyType` or manually `impl Debug for MyType`
help: consider annotating `MyType` with `#[derive(Debug)]`
   |
6  + #[derive(Debug)]
7  | struct MyType;
   |

error[E0277]: the trait bound `MyOwnedType: Clone` is not satisfied
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |          ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^ the trait `Clone` is not implemented for `MyOwnedType`
   |
help: consider annotating `MyOwnedType` with `#[derive(Clone)]`
   |
7  + #[derive(Clone)]
8  | struct MyOwnedType;
   |

error[E0277]: `MyOwnedType` doesn't implement `Debug`
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |                 ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^ the trait `Debug` is not implemented for `MyOwnedType`
   |
   = note: add `#[derive(Debug)]` to `MyOwnedType` or manually `impl Debug for MyOwnedType`
help: consider annotating `MyOwnedType` with `#[derive(Debug)]`
   |
7  + #[derive(Debug)]
8  | struct MyOwnedType;
   |
